--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,10 @@ code {
     @apply shadow-[1px_1px_5px_rgba(00,00,05,1),-3px_-3px_6px_rgba(255,255,255,1)] p-2 rounded-md;
   }
 
+  .revised-shadow {
+    @apply shadow-[4px_4px_4px_rgba(2,2,2,1),-4px_-4px_4px_rgba(200,200,200,1)]
+  }
+
   .error-msg {
     @apply text-red-500 font-light;
   }
